# workspace

./: LICENSE  README.md
c_cpp/Enigma/: CMakeLists.txt  code.txt  decode.cpp  decode.txt  main.cpp
c_cpp/Enigma/.cache/clangd/index/: decode.cpp.F638777F515574E2.idx  main.cpp.DAC08CD504FE16E5.idx
c_cpp/c_cpp/: CMakeLists.txt  ollama.py
c_cpp/c_cpp/src/: data_stright_rect_calculator.cpp  f_test.cpp  finall_test.cpp  homework2.cpp  k.cpp  main.cpp  sch_finall_test.cpp  school_homework_3.cpp  school_homework_4.cpp  school_homework_5.cpp  test2401.cpp  ybttest.cpp
c_cpp/data_stright_rect_calculator/date2/: CMakeLists.txt  main.cpp
c_cpp/data_stright_rect_calculator/my_homework_5/: CMakeLists.txt  main.cpp
c_cpp/debug/: CMakeLists.txt
c_cpp/no/cpp/: CMakeLists.txt  hello.cpp  main.cpp  test.cpp
c_cpp/workspace_py/: main.py
deeplearning/learning_conda/: cnn.onnx
deeplearning/learning_conda/cov19/xray_dataset_covid19/main/: main.py  test.py
deeplearning/learning_conda/src/: cnn_test.py  deep_learning.py  load_model.py  main.py  mlp_mini.py  tensor.py
deeplearning/learning_conda/src/Google_net/: Googlenet_mnist.py  model.py  net.py  train.py
deeplearning/learning_conda/src/flower_det/: convalution_mul.py  google.py  new_way.py  new_way_2.py  new_way_3.py  new_way_4.py
deeplearning/learning_conda/src/flower_det/load_pth.py/: fruit.py
deeplearning/learning_conda/src/flower_det/pre_cpp_txt/: CMakeLists.txt  main.cpp
deeplearning/learning_conda/src/fruit_det/fruit_141/fruits-360_dataset_100x100/fruits-360/: new_way_4.py  new_way_5.py
deeplearning/learning_conda/src/fruit_det/fruit_141/fruits-360_dataset_100x100/fruits-360/load_pth.py/: load.py  pyinstall.py  test_load.py
deeplearning/learning_conda/src/fruit_det/fruit_141/fruits-360_dataset_100x100/fruits-360/pre_cpp_txt/: main.cpp
deeplearning/learning_conda/src/load_model_cpp/: CMakeLists.txt  blue.cpp  finall.cpp  main.cpp  number.cpp  red.cpp  test.cpp  test1.cpp
deeplearning/learning_conda/src/load_model_cpp/number_dector_app/: load.py
jingziqi/: CMakeLists.txt  ai.cpp  main.cpp
opencv/workspace/my_homework_5/: CMakeLists.txt  main.cpp
opencv/workspace/opencv_learning/: CMakeLists.txt
opencv/workspace/opencv_learning/src/: class2.cpp  homework1.cpp  k.cpp  lookuptable.cpp  main1.cpp  mind_2.cpp  mind_2_circle.cpp  noway.cpp  operation_image.cpp  picture_sel.cpp  testc.cpp
snake/: CMakeLists.txt  doubao_new_snack.cpp  k.cpp  main.cpp  main.py  new_snack.cpp  update.cpp
